# umi

./: CMakeLists.txt  README.md
doc/: Doxyfile.in
files/conf/: asound.conf  config.h.in  device-cap.json  umi-config.json
files/pkgconfig/: umi.pc.in
include/public/: umiaudio.h  umiclient.h  umicommon.h
src/: devicecapability.cpp  devicecapability.h  logging.h
src/umi/: umialsaaudio.cpp  umialsaaudio.h  umiclient.cpp  umiconfig.cpp  umiconfig.h  umifactory.cpp  umifactory.h
